--- a/templates/covid19-dashboard.Rmd
+++ b/templates/covid19-dashboard.Rmd
@@ -107,6 +107,25 @@ latest.top.rank.snapshots$rank.time <- as.POSIXct(latest.top.rank.snapshots$rank
 latest.top.rank.snapshots$age.minutes <- as.integer((latest.top.rank.snapshots$rank.time - max(latest.top.rank.snapshots$rank.time))/60)
 ````
 
+<!-- Matomo -->
+<script type="text/javascript">
+  if (window.location.hostname == "covid-algotracker.citizensandtech.org") {
+    var _paq = window._paq || [];
+    /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+    _paq.push(['trackPageView']);
+    _paq.push(['enableLinkTracking']);
+    (function() {
+      var u="https://citizensandtech.matomo.cloud/";
+      _paq.push(['setTrackerUrl', u+'matomo.php']);
+      _paq.push(['setSiteId', '1']);
+      var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+      g.type='text/javascript'; g.async=true; g.defer=true; g.src='//cdn.matomo.cloud/citizensandtech.matomo.cloud/matomo.js'; s.parentNode.insertBefore(g,s);
+    })();
+  }
+</script>
+<!-- End Matomo Code -->
+
+
 *Latest HOT Snapshot taken: `r as.POSIXct(unique(latest.hot.ranks$rank_time))`. Latest TOP Snapshot taken: `r as.POSIXct(unique(latest.top.ranks$rank_time))`*
 
 TODO: a description of the page goes here.
